cabal-version:      2.4
name:               sd-png-metadata
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             'Thomas Eding'
maintainer:         'thomaseding@gmail.com'

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable sd-png-metadata
    main-is: Main.hs

    ghc-options: -Wall -Werror -O2

    other-extensions:
        AllowAmbiguousTypes,
        ApplicativeDo,
        BangPatterns,
        BlockArguments,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveFunctor,
        EmptyDataDecls,
        ExtendedDefaultRules,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        LambdaCase,
        MagicHash,
        MultiParamTypeClasses,
        MultiWayIf,
        OverloadedStrings,
        PatternSynonyms,
        PolyKinds,
        QuantifiedConstraints,
        RankNTypes,
        RecursiveDo,
        ScopedTypeVariables,
        StandaloneDeriving,
        StrictData,
        TemplateHaskellQuotes,
        TypeApplications,
        TypeFamilyDependencies,
        ViewPatterns

    build-depends:
       base ^>=4.14.3.0,
       bytestring ^>=0.10.12.0,
       deepseq >=1.1 && <1.5,
       directory ^>=1.3.6.0,
       filepath ^>=1.4.2.1,
       JuicyPixels ^>=3.3.8,
       JuicyPixels-extra ^>=0.5.2,
       split ^>=0.2.3.5

    hs-source-dirs:   src
    default-language: Haskell2010
